// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[EN] http: Title 1`] = `
<div
  class="titleWrapper"
>
  <h2
    class="title"
  >
    doc-from-serp.pdf
  </h2>
  <div
    class="disclaimer"
  >
    <span>
      This is a document from the site 
      <lego-components_link
        data-ref="url"
        href="http://ya.ru/docs/doc-from-serp.pdf"
        target="_blank"
        theme="normal"
      >
        ya.ru
      </lego-components_link>
    </span>
  </div>
</div>
`;

exports[`[EN] https: Title 1`] = `
<div
  class="titleWrapper"
>
  <h2
    class="title"
  >
    doc-from-serp.pdf
  </h2>
  <div
    class="disclaimer"
  >
    <span>
      This is a document from the site 
      <lego-components_link
        data-ref="url"
        href="https://ya.ru/docs/doc-from-serp.pdf"
        target="_blank"
        theme="normal"
      >
        ya.ru
      </lego-components_link>
    </span>
  </div>
</div>
`;

exports[`[EN] ya-serp: Title 1`] = `
<div
  class="titleWrapper"
>
  <h2
    class="title"
  >
    doc-from-serp.pdf
  </h2>
  <div
    class="disclaimer"
  >
    <span>
      The document cannot be accessed. This copy of the document from the website 
      <lego-components_link
        data-ref="url"
        href="http://ya.ru/docs/doc-from-serp.pdf"
        target="_blank"
        theme="normal"
      >
        ya.ru
      </lego-components_link>
       automatically created by the Yandex search engine on 
      <span
        data-ref="date"
      >
        28 Feb. 2017
      </span>
      .
    </span>
  </div>
</div>
`;

exports[`[EN] ya-serps: Title 1`] = `
<div
  class="titleWrapper"
>
  <h2
    class="title"
  >
    doc-from-serp.pdf
  </h2>
  <div
    class="disclaimer"
  >
    <span>
      The document cannot be accessed. This copy of the document from the website 
      <lego-components_link
        data-ref="url"
        href="https://ya.ru/docs/doc-from-serp.pdf"
        target="_blank"
        theme="normal"
      >
        ya.ru
      </lego-components_link>
       automatically created by the Yandex search engine on 
      <span
        data-ref="date"
      >
        28 Feb. 2017
      </span>
      .
    </span>
  </div>
</div>
`;

exports[`[RU] http: Title 1`] = `
<div
  class="titleWrapper"
>
  <h2
    class="title"
  >
    doc-from-serp.pdf
  </h2>
  <div
    class="disclaimer"
  >
    <span>
      Это документ с сайта 
      <lego-components_link
        data-ref="url"
        href="http://ya.ru/docs/doc-from-serp.pdf"
        target="_blank"
        theme="normal"
      >
        ya.ru
      </lego-components_link>
    </span>
  </div>
</div>
`;

exports[`[RU] https: Title 1`] = `
<div
  class="titleWrapper"
>
  <h2
    class="title"
  >
    doc-from-serp.pdf
  </h2>
  <div
    class="disclaimer"
  >
    <span>
      Это документ с сайта 
      <lego-components_link
        data-ref="url"
        href="https://ya.ru/docs/doc-from-serp.pdf"
        target="_blank"
        theme="normal"
      >
        ya.ru
      </lego-components_link>
    </span>
  </div>
</div>
`;

exports[`[RU] ya-serp: Title 1`] = `
<div
  class="titleWrapper"
>
  <h2
    class="title"
  >
    doc-from-serp.pdf
  </h2>
  <div
    class="disclaimer"
  >
    <span>
      Документ недоступен. Это копия документа с сайта 
      <lego-components_link
        data-ref="url"
        href="http://ya.ru/docs/doc-from-serp.pdf"
        target="_blank"
        theme="normal"
      >
        ya.ru
      </lego-components_link>
       автоматически создана поисковой системой Яндекса 
      <span
        data-ref="date"
      >
        28.02.2017
      </span>
      .
    </span>
  </div>
</div>
`;

exports[`[RU] ya-serps: Title 1`] = `
<div
  class="titleWrapper"
>
  <h2
    class="title"
  >
    doc-from-serp.pdf
  </h2>
  <div
    class="disclaimer"
  >
    <span>
      Документ недоступен. Это копия документа с сайта 
      <lego-components_link
        data-ref="url"
        href="https://ya.ru/docs/doc-from-serp.pdf"
        target="_blank"
        theme="normal"
      >
        ya.ru
      </lego-components_link>
       автоматически создана поисковой системой Яндекса 
      <span
        data-ref="date"
      >
        28.02.2017
      </span>
      .
    </span>
  </div>
</div>
`;

exports[`[TR] http: Title 1`] = `
<div
  class="titleWrapper"
>
  <h2
    class="title"
  >
    doc-from-serp.pdf
  </h2>
  <div
    class="disclaimer"
  >
    <span>
      Bu belge, 
      <lego-components_link
        data-ref="url"
        href="http://ya.ru/docs/doc-from-serp.pdf"
        target="_blank"
        theme="normal"
      >
        ya.ru
      </lego-components_link>
       sitesinde bulunmaktadır.
    </span>
  </div>
</div>
`;

exports[`[TR] https: Title 1`] = `
<div
  class="titleWrapper"
>
  <h2
    class="title"
  >
    doc-from-serp.pdf
  </h2>
  <div
    class="disclaimer"
  >
    <span>
      Bu belge, 
      <lego-components_link
        data-ref="url"
        href="https://ya.ru/docs/doc-from-serp.pdf"
        target="_blank"
        theme="normal"
      >
        ya.ru
      </lego-components_link>
       sitesinde bulunmaktadır.
    </span>
  </div>
</div>
`;

exports[`[TR] ya-serp: Title 1`] = `
<div
  class="titleWrapper"
>
  <h2
    class="title"
  >
    doc-from-serp.pdf
  </h2>
  <div
    class="disclaimer"
  >
    <span>
      <lego-components_link
        data-ref="url"
        href="http://ya.ru/docs/doc-from-serp.pdf"
        target="_blank"
        theme="normal"
      >
        ya.ru
      </lego-components_link>
       sitesinde bulunan bu belgeye şu an ulaşılamıyor. Belgenin gördüğünüz kopyası Yandex arama motoru tarafından 
      <span
        data-ref="date"
      >
        28.02.2017
      </span>
       tarihinde otomatik olarak oluşturuldu.
    </span>
  </div>
</div>
`;

exports[`[TR] ya-serps: Title 1`] = `
<div
  class="titleWrapper"
>
  <h2
    class="title"
  >
    doc-from-serp.pdf
  </h2>
  <div
    class="disclaimer"
  >
    <span>
      <lego-components_link
        data-ref="url"
        href="https://ya.ru/docs/doc-from-serp.pdf"
        target="_blank"
        theme="normal"
      >
        ya.ru
      </lego-components_link>
       sitesinde bulunan bu belgeye şu an ulaşılamıyor. Belgenin gördüğünüz kopyası Yandex arama motoru tarafından 
      <span
        data-ref="date"
      >
        28.02.2017
      </span>
       tarihinde otomatik olarak oluşturuldu.
    </span>
  </div>
</div>
`;

exports[`[UK] http: Title 1`] = `
<div
  class="titleWrapper"
>
  <h2
    class="title"
  >
    doc-from-serp.pdf
  </h2>
  <div
    class="disclaimer"
  >
    <span>
      Це документ із сайту 
      <lego-components_link
        data-ref="url"
        href="http://ya.ru/docs/doc-from-serp.pdf"
        target="_blank"
        theme="normal"
      >
        ya.ru
      </lego-components_link>
    </span>
  </div>
</div>
`;

exports[`[UK] https: Title 1`] = `
<div
  class="titleWrapper"
>
  <h2
    class="title"
  >
    doc-from-serp.pdf
  </h2>
  <div
    class="disclaimer"
  >
    <span>
      Це документ із сайту 
      <lego-components_link
        data-ref="url"
        href="https://ya.ru/docs/doc-from-serp.pdf"
        target="_blank"
        theme="normal"
      >
        ya.ru
      </lego-components_link>
    </span>
  </div>
</div>
`;

exports[`[UK] ya-serp: Title 1`] = `
<div
  class="titleWrapper"
>
  <h2
    class="title"
  >
    doc-from-serp.pdf
  </h2>
  <div
    class="disclaimer"
  >
    <span>
      Документ недоступний. Цю копію документа із сайту 
      <lego-components_link
        data-ref="url"
        href="http://ya.ru/docs/doc-from-serp.pdf"
        target="_blank"
        theme="normal"
      >
        ya.ru
      </lego-components_link>
       автоматично створено пошуковою системою Яндекса 
      <span
        data-ref="date"
      >
        28.02.2017
      </span>
      .
    </span>
  </div>
</div>
`;

exports[`[UK] ya-serps: Title 1`] = `
<div
  class="titleWrapper"
>
  <h2
    class="title"
  >
    doc-from-serp.pdf
  </h2>
  <div
    class="disclaimer"
  >
    <span>
      Документ недоступний. Цю копію документа із сайту 
      <lego-components_link
        data-ref="url"
        href="https://ya.ru/docs/doc-from-serp.pdf"
        target="_blank"
        theme="normal"
      >
        ya.ru
      </lego-components_link>
       автоматично створено пошуковою системою Яндекса 
      <span
        data-ref="date"
      >
        28.02.2017
      </span>
      .
    </span>
  </div>
</div>
`;
